acvm-repo/msgpack_tagged/tests/compile_fail/tuple_struct_duplicate_field_tag.stderr
error: tag 0 is used more than once
 --> tests/compile_fail/tuple_struct_duplicate_field_tag.rs:7:30
  |
7 | struct Triple(#[tag(0)] u32, #[tag(0)] bool, #[tag(2)] u8);
  |                              ^^^^^^^^^^^^^^
